# madsoft_meme

./: README.md  docker-compose.yml
backend/: .coverage  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/crud/: memes.py
backend/models/: database.py  memes.py
backend/routers/: memes_private.py  memes_public.py
backend/schemas/: memes.py
backend/settings/: config.py
backend/tests/: test_main.py
backend/tests/tmp/: check.txt
